--- a/src/s21_smart_calc_v_2_0/view/smartcalc.ui
+++ b/src/s21_smart_calc_v_2_0/view/smartcalc.ui
@@ -1321,6 +1321,49 @@ QPushButton:pressed {
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>textEdit</tabstop>
+  <tabstop>xValue</tabstop>
+  <tabstop>equalsButton</tabstop>
+  <tabstop>resultCalc</tabstop>
+  <tabstop>BuildGraph</tabstop>
+  <tabstop>minX</tabstop>
+  <tabstop>maxX</tabstop>
+  <tabstop>minY</tabstop>
+  <tabstop>maxY</tabstop>
+  <tabstop>pushButton_3</tabstop>
+  <tabstop>pushButton_4</tabstop>
+  <tabstop>pushButton_degree</tabstop>
+  <tabstop>pushButton_7</tabstop>
+  <tabstop>pushButton_x_number</tabstop>
+  <tabstop>pushButton_mod</tabstop>
+  <tabstop>pushButton_div</tabstop>
+  <tabstop>pushButton_sin</tabstop>
+  <tabstop>pushButton_sqrt</tabstop>
+  <tabstop>pushButton_open_br</tabstop>
+  <tabstop>pushButton_close_br</tabstop>
+  <tabstop>pushButton_plus</tabstop>
+  <tabstop>pushButton_6</tabstop>
+  <tabstop>pushButton_tan</tabstop>
+  <tabstop>pushButton_mult</tabstop>
+  <tabstop>delButton</tabstop>
+  <tabstop>pushButton_atan</tabstop>
+  <tabstop>pushButton_sub</tabstop>
+  <tabstop>pushButton_log</tabstop>
+  <tabstop>pushButton_5</tabstop>
+  <tabstop>pushButton_1</tabstop>
+  <tabstop>pushButton_unary_minus</tabstop>
+  <tabstop>pushButton_8</tabstop>
+  <tabstop>pushButton_asin</tabstop>
+  <tabstop>pushButton_acos</tabstop>
+  <tabstop>ACButton</tabstop>
+  <tabstop>pushButton_0</tabstop>
+  <tabstop>pushButton_cos</tabstop>
+  <tabstop>pushButton_point</tabstop>
+  <tabstop>pushButton_9</tabstop>
+  <tabstop>pushButton_ln</tabstop>
+  <tabstop>pushButton_2</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
