--- a/src/s21_smart_calc_v_2_0/view/smartcalc.ui
+++ b/src/s21_smart_calc_v_2_0/view/smartcalc.ui
@@ -492,6 +492,9 @@ QPushButton:pressed {
 
 background-color : white;</string>
    </property>
+   <property name="maxLength">
+    <number>255</number>
+   </property>
    <property name="placeholderText">
     <string> Edit expression </string>
    </property>
